# FS-CV-perception-sim

./: README.md
fs_perception_pkg/: CMakeLists.txt  package.xml
fs_perception_pkg/launch/: perception.launch
fs_perception_pkg/rviz/: perception.rviz
fs_perception_pkg/scripts/: map_creation.py  yolo-implementation.py
path_tracker/: CMakeLists.txt  package.xml
path_tracker/src/: follower.py
plannar_mover/: package.xml
plannar_mover/launch/: plannar_mover_control.launch
plannar_mover/src/: plannar_mover.cpp
racecar/racecar/config/racecar-v2/: joy_teleop_sim.yaml  vesc.yaml
racecar/racecar/scripts/: joy_teleop.py
racecar_gazebo/racecar_control/launch/: gazebo_sim_joy.launch  teleop.launch
racecar_gazebo/racecar_description/models/MIT_Tunnel/: model.config  model.sdf
racecar_gazebo/racecar_description/models/MIT_Tunnel/antiguo/: antiguo_model.sdf  nuevo_model.sdf
racecar_gazebo/racecar_description/urdf/: racecar.gazebo  racecar.xacro
racecar_gazebo/racecar_gazebo/launch/: racecar.launch
racecar_gazebo/racecar_gazebo/worlds/: racecar_tunnel.world
rviz/: config.rviz  config_nube_camera.rviz
